<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterprise_info_text"
        android:textColor="@android:color/black"
        android:textSize="24sp" />
    <View
        android:layout_marginVertical="4dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />


    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cd_name_label"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cd_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Nombre de la empresa de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cd_website_label"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cd_website_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Sitio web de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cd_phone_label"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cd_phone_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Telefono de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cd_email_label"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cd_email_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="e-mail de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_services_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="24dp" />
    <View
        android:layout_marginTop="4dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/cd_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Produtos y servicios de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classifications_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="24dp" />
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/cd_classifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Clasificaciones de prueba :v"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:inputType="textMultiLine" />


</LinearLayout>