<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterprise_info_text"
        android:textColor="@android:color/black"
        android:textSize="24sp" />
    <View
        android:layout_marginVertical="4dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterprise_name_text"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterprise_website_text"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterprise_phone_text"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterprise_email_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_services_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="24dp" />
    <View
        android:layout_marginTop="4dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/products_services_text"
            android:minLines="2"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classifications_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="24dp" />
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/consultory_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground" >
        <CheckBox
            android:id="@+id/consultory_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@android:color/transparent"
            android:clickable="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultory_text"
            android:textSize="18sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/development_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground" >
        <CheckBox
            android:id="@+id/development_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@android:color/transparent"
            android:clickable="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/development_text"
            android:textSize="18sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/factory_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground">
        <CheckBox
            android:id="@+id/factory_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@android:color/transparent"
            android:clickable="false"/>
        <TextView
            android:id="@+id/classification_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factory_text"
            android:textSize="18sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>